# crypto-perpetual-spread

./: .env  app.log.1  app.log.2  app.log.3  app.log.4  app.log.5  bi.py  bybit_perp.py  main.py  okx_format.json  pyproject.toml  utils.py
